--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 # -----------------------
 __pycache__/
 *.py[cod]
-*.sqlite3
+# *.sqlite3
 *.log
 *.pot
 *.pyc
@@ -21,7 +21,7 @@ __pycache__/
 *.pyd
 *.env
 .env.*
-db.sqlite3
+# db.sqlite3
 local_settings.py
 media/
 staticfiles/
